@@ -1,5 +1,8 @@
 2009-01-28  Roland McGrath  <roland@redhat.com>
 
+	* libdwP.h (struct Dwarf_Line_s): Move out of struct Dwarf_Lines_s
+	defn so C++ doesn't scope the name to not match the Dwarf_Line typedef.
+
 	* libdwP.h (struct Dwarf_Files_s): Replace dbg field with cu field.
 
 2009-01-26  Roland McGrath  <roland@redhat.com>
